more style for pictures and font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,17 @@ body {
 h1, label {
     font-family: 'Permanent Marker', cursive;
 }
+.imageDiv{
+    border: 3px dashed white;
+    padding: 10px;
+    width: 400px;
+    height: auto;
+    margin: 20px;
+    font-family: 'Permanent Marker', cursive;
+    
+  }
+.gifImages {
+    width: 350px;
+    margin: 10px;
+}
+
