fixed background syntax error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../images/congruent_pentagon.png)
+    background: url(../images/congruent_pentagon.png);
 }
 h1, label {
     font-family: 'Permanent Marker', cursive;
